--- a/src/components/categorys/category.css
+++ b/src/components/categorys/category.css
@@ -1,7 +1,7 @@
-.bannerContainer {
+.categoryContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 300px;
-  background-color: coral;
+  background-color: cornflowerblue;
 }
