--- a/src/components/infoClient/infoClient.css
+++ b/src/components/infoClient/infoClient.css
@@ -1,7 +1,7 @@
-.bannerContainer {
+.infoClientContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
-  background-color: coral;
+  height: 150px;
+  background-color: bisque;
 }
