add css component

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .App {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Poppins', sans-serif;
-  background-color: #fff0de;
+  background-color: #F8D9A6;
 }
 p::first-letter {
   text-transform: capitalize;
