--- a/src/components/miniBanner/miniBanner.css
+++ b/src/components/miniBanner/miniBanner.css
@@ -1,12 +1,55 @@
 .miniBannerContainer{
-  padding: 80px;
-  color: #D8476B;
-  font-weight: 600;
+  background-color: #E48524;
+  width: 100%;
 }
 
-.infoClientContainer__paragraf {
+.infoClientContainer__vela{
+  position: relative;
+}
+
+.miniBannerContainer img {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #FBC87C;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms;
+
+}
+
+/* .miniBannerContainer img:hover{
+  transform: scale(1.5);
+} */
+
+.buttonVerMas{
+  position: absolute;
+  top: 80%;
+  left: 8%;
+}
+
+.infoClientContainer__vela p{
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  bottom: 10%;
+  transition: all 300ms;
+
+}
+
+.infoClientContainer__vela p:hover{
+  transform: scale(1.08);
+}
+
+.buttonVerMas{
+  color: #F8D9A6;
+  font-size: 25px;
+  font-weight: 800;
+  border: none;
+  border-radius: 10%;
+  background-color: #D7476B;
+  width: 180px;
+  height: 50px;
+  transition: all 300ms;
+}
+
+.buttonVerMas:hover{
+  transform: scale(1.08);
 }
