--- a/src/pages/productDetail/productDetail.css
+++ b/src/pages/productDetail/productDetail.css
@@ -3,20 +3,28 @@
 }
 
 .infoDescription{
+padding-bottom: 20px;
+padding-left: 50px;
+}
 
-  padding: 1%;
+.paragrafh{
+  color: #D8476B;
+  padding-right: 250px;
 }
 
 .productDetalCont__info img{
-  width: 500px;
+  width: 600px;
 }
 
 .cont5{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 100px;
-  padding-right: 20%;
+  align-items: center;
+  align-content: center;
+  gap: 50px;
+
+
 }
 
 .productDetButton{
@@ -25,4 +33,9 @@
   border: none;
   width: 250px;
   height: 30px;
+  font-size: 18px;
+}
+
+.cont__img {
+  padding-left: 200px;
 }
