add characters to total and shopping cart

--- a/src/components/badge/badge.css
+++ b/src/components/badge/badge.css
@@ -1,4 +1,11 @@
-.shopping-cart-items{
+.badge-cart-items{
+  width: 15px;
+  height: 25px;
+  color: white;
   padding: 0;
-
+  border-radius: 100%;
+  background-color: #D8476B;
+  border: 10px;
+  border-color: black;
+  text-align: center;
 }
