--- a/src/pages/payment/payment.css
+++ b/src/pages/payment/payment.css
@@ -8,18 +8,18 @@
 
 }
 
-.pasarela-pay{
+/* .pasarela-pay{
   background-color: azure;
   width: 500px;
   font-size: 24px;
-}
+} */
 
 .__PrivateStripeElement{
   font-size: 24px;
 }
 
-.checkoutForm {
+/* .checkoutForm {
   display: flex;
   flex-direction: column;
   gap: 15px;
-}
+} */
