--- a/src/pages/formPay/formPay.css
+++ b/src/pages/formPay/formPay.css
@@ -2,7 +2,8 @@
 .formPayContainer{
   display: flex;
   flex-direction: wrap;
-  gap: 100px;
+  align-content: center;
+  /* gap: 100px; */
   background-color: rgb(255, 234, 208);
   font-size: 20px;
   padding: 20px;
@@ -10,6 +11,14 @@
 
 .formPayContainer__form{
   width: 600px;
+}
+
+.goLogin {
+  text-decoration: none;
+}
+
+.goLogin:hover {
+  opacity: 0.5;
 }
 
 .imageinfoPay {
@@ -67,6 +76,7 @@
 
 .formPayContainer__infoPay{
   padding: 10px;
+  padding-right: 200px;
 }
 
 .Finalizar{
@@ -76,4 +86,10 @@
   width: 250px;
   height: 30px;
   font-size: 18px;
+}
+
+.errorStyles{
+  color: #dc3545;
+  font-size: 14px;
+  margin: 0;
 }
