--- a/src/pages/modal/modal.css
+++ b/src/pages/modal/modal.css
@@ -21,7 +21,7 @@
 }
 
 .buttonModal {
-  background-color: #3ba6d6;
+  background-color: #D8476B;
   color: white;
   font-weight: 600;
   border: none;
