--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   font-family: 'Open Sans', sans-serif;
   font-family: 'Poppins', sans-serif;
   background-color: #F8D9A6;
+  /* background-color: #f5b3b84d; */
 }
 p::first-letter {
   text-transform: capitalize;
