--- a/src/components/bannerRedes/bannerRedes.css
+++ b/src/components/bannerRedes/bannerRedes.css
@@ -1,18 +1,18 @@
-.hrBannerRedes {
-  margin-top: 50px;
-  margin-bottom: 25px;
-
-}
 
 .bannerRedesContainer__title {
   text-align: center;
+  font-size: 20PX;
+}
+
+.bannerRedesContainer img {
+  width: 300px;
 }
 
 .bannerRedesContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 30px;
 
 }
 
