--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -30,7 +30,7 @@
 }
 
 .ppp{
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .headerContainer2 {
@@ -39,14 +39,19 @@
 }
 
 
-
 .buttons__header {
   background-color: transparent;
   color: #D8476B;
   border: 0px;
   padding: 0%;
   margin: 16px;
-  font-size: 20px;
+  font-size: 28px;
+  transition: all 300ms;
+}
+
+.buttons__header:hover {
+  opacity: 0.6;
+  transform: scale(1.08);
 }
 
 .headerContainer1__icon {
@@ -77,6 +82,12 @@
   background-color: transparent;
   border: 0;
   width: 50px;
+  transition: all 300ms;
+}
+
+.butto_cart:hover {
+  opacity: 0.6;
+  transform: scale(1.08);
 }
 
 .headerContainer1__icon-cart {
