--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,13 @@
+.headerContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.headercontainer2{
+  display: flex;
+  justify-content: end;
+}
+
 .hederContainer1 {
   display: flex;
   flex-direction: row;
@@ -7,18 +17,33 @@
 
 }
 
+.headercontainer2{
+  background-color: #f5b3b84d;
+  margin: 0px;
+}
+
+.headerContainer2__profile{
+  display: flex;
+}
+
 .miniContainer__logoLink img{
   width: 200px;
+}
 
+.headerContainer1__searcAndMd{
+  display: flex;
+  align-items: center;
 }
 
 .hederContainer1__extra {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  /* gap: 20px; */
-  padding-right: 40px;
-  margin-top: 30px;
+
+}
+
+.hederContainer1__search{
+  margin-right: 10px;
 }
 
 .hrHeader {
@@ -31,6 +56,10 @@
 
 .ppp{
   font-size: 30px;
+}
+
+.pppp{
+  font-size: 25px;
 }
 
 .headerContainer2 {
@@ -78,16 +107,6 @@
 
 }
 
-.headerContainer1__cart-intoo{
-  position: absolute;
-  background-color: rgb(252, 247, 241);
-  display: flex;
-  flex-direction: column;
-  top: 15%;
-  left: 0%;
-  
-}
-
 .cartInto{
   padding: 10px;
   box-shadow: 3px 3px 5px 5px rgb(137, 131, 131);
@@ -108,7 +127,7 @@
 .headerContainer1__icon-cart {
   display: flex;
   align-items: center;
-
+  
 }
 
 .cartt{
@@ -134,7 +153,7 @@ position: absolute;
 
 }
 
-.headerContainer1__profile p {
+.headerContainer2__profile p {
   color: #D8476B;
   margin: 0;
 }
@@ -149,13 +168,28 @@ position: absolute;
   height: 25px;
 }
 
+.headerContainer1__cart-intoo{
+  display: none;
+}
+
 @media (max-width: 1025px) {
 
-  .headerContainer {
-    padding: 10px;
+
+  .headerContainer1__cart-intoo{
+    position: absolute;
+    background-color: rgb(252, 247, 241);
+    display: flex;
+    flex-direction: column;
+    top: 15%;
+    left: 0%;
+    
   }
 
   .hederContainer1__namesPages{
+    display: none;
+  }
+
+  .hederContainer1__login{
     display: none;
   }
 
@@ -166,6 +200,21 @@ position: absolute;
     max-width: 50px;
     align-items: center;
     gap: 10px;
+  }
+
+  .buttons__header-profile {
+    background-color: #D8476B;
+    color: #F8D9A6;
+    font-size: 10px;
+    border: 0;
+    width: 60px;
+    transition: all 300ms;
+    margin: 0;
+    height: 25px;
+  }
+
+  .headerContainer2__profile p{
+    font-size: 12px;
   }
 }
 
