--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -5,36 +5,44 @@
 .productsContainer {
   display: flex;
   flex-direction: column;
-  align-content: center;
+  
 }
 
-.productsContainer__title__h1{
+.productsContainer__title{
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  width: 100%;
 }
+
+.productsContainer__title img{
+ width: 350px;
+}
+
 
 .productsContainer__title p{
   padding-right: 20%;
   padding-left: 20%;
   color: #D7476B;
-  font-size: 18px;
+  font-size: 12px;
+  text-align: center;
 }
 
 .productsContainer__section2{
  display: flex;
- flex-wrap: wrap
+ justify-content: center;
 }
 
 .productsContainer__products{
-  display: grid;
-  grid-template-columns: repeat(2, 2fr);
-  margin: 5%;
-  gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: #fccc7e;
   border-radius: 10%;
-  width: 100%;
+  width: 65%;
   flex-wrap: wrap;
-  padding-bottom: 20px;
+  padding-bottom: 20px; 
+  gap: 30px;
 }
 
 .productsContainer__cart {
@@ -42,6 +50,11 @@
   flex-direction: column;
   align-items: center;
   gap: 5px;
+  width: 40%;
+}
+
+.productsContainer__cart img{
+   width: 100%; 
 }
 
 
@@ -49,6 +62,7 @@
   color: #fccc7e;
   background-color: #D8476B;
   border: none;
-  width: 250px;
-  height: 30px;
+  width: 100%;
+  height: 100%;
+  
 }
